--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,41 +23,21 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">SLiPP</a>
+      <a class="navbar-brand" href="/index.html">SLiPP</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/form.html">회원가입</a></li>
+        <li><a href="/list.html">사용자 목록</a>
           </ul>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-<div class="container">	
-	<form action="/create" method="post">
-  <div class="form-group">
-    <label for="userId">사용자 아이디</label>
-    <input type="text" class="form-control" name="userId" placeholder="사용자 아이디">
-  </div>
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input type="password" class="form-control" name="password" placeholder="비밀번호">
-  </div>
-  <div class="form-group">
-    <label for="name">이름</label>
-    <input type="text" class="form-control" name="name" placeholder="이름">
-  </div>
-  <div class="form-group">
-    <label for="email">이메일</label>
-    <input type="email" class="form-control" name="email" placeholder="이메일">
-  </div>
-
-  <button type="submit" value="확인" class="btn btn-default">확인</button>
-</form>
-</div>
+	<h1>Hello, world! JAVA</h1>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="/webjars/jquery/3.1.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
